<resources>
    <string name="app_name">ViewAnimation</string>
    <string name="string00">View 动画</string>
    <string name="string01">渐变</string>
    <string name="string02">缩放</string>
    <string name="string03">平移</string>
    <string name="string04">旋转</string>
    <string name="string05">组合1</string>
    <string name="string06">组合2</string>
    <string name="string07">属性动画</string>
    <string name="string08">实践：抽屉动画</string>
    <string name="string09">开始</string>
</resources>