<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_view_animation"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingStart="15dp"
            android:text="@string/string00"
            android:gravity="center_vertical"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

    <Button
            android:id="@+id/btn_animation_alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/string01"
            android:onClick="onViewClick"
            app:layout_constraintEnd_toStartOf="@+id/btn_animation_scale"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_view_animation" />

    <Button
            android:id="@+id/btn_animation_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string02"
            android:onClick="onViewClick"
            app:layout_constraintEnd_toStartOf="@+id/btn_animation_set1"
            app:layout_constraintStart_toEndOf="@+id/btn_animation_alpha"
            app:layout_constraintTop_toTopOf="@+id/btn_animation_alpha" />

    <Button
            android:id="@+id/btn_animation_set1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string05"
            android:onClick="onViewClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_animation_scale"
            app:layout_constraintTop_toTopOf="@+id/btn_animation_alpha" />

    <Button
            android:id="@+id/btn_animation_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string03"
            android:onClick="onViewClick"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_animation_scale"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_animation_alpha" />

    <Button
            android:id="@+id/btn_animation_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string04"
            android:onClick="onViewClick"
            app:layout_constraintEnd_toStartOf="@+id/btn_animation_set2"
            app:layout_constraintStart_toEndOf="@+id/btn_animation_translate"
            app:layout_constraintTop_toTopOf="@+id/btn_animation_translate" />

    <Button
            android:id="@+id/btn_animation_set2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string06"
            android:onClick="onViewClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_animation_rotate"
            app:layout_constraintTop_toTopOf="@+id/btn_animation_translate" />

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_animation"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_launcher_background"
            android:foreground="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="@+id/btn_animation_alpha"
            app:layout_constraintTop_toBottomOf="@+id/btn_animation_translate" />

    <!-- 属性动画 -->
    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_object_animation"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:paddingStart="15dp"
            android:text="@string/string07"
            android:gravity="center_vertical"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_animation"
            tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>